tests/ui/traits/const-traits/super-traits-fail-3.ynn.stderr
error: `[const]` is not allowed here
  --> $DIR/super-traits-fail-3.rs:23:12
   |
LL | trait Bar: [const] Foo {}
   |            ^^^^^^^
   |
note: this trait is not `const`, so it cannot have `[const]` trait bounds
  --> $DIR/super-traits-fail-3.rs:23:1
   |
LL | trait Bar: [const] Foo {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: `[const]` can only be applied to `const` traits
  --> $DIR/super-traits-fail-3.rs:23:12
   |
LL | trait Bar: [const] Foo {}
   |            ^^^^^^^ can't be applied to `Foo`
   |
help: mark `Foo` as `const` to allow it to have `const` implementations
   |
LL | #[const_trait] trait Foo {
   | ++++++++++++++

error: `[const]` can only be applied to `const` traits
  --> $DIR/super-traits-fail-3.rs:23:12
   |
LL | trait Bar: [const] Foo {}
   |            ^^^^^^^ can't be applied to `Foo`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: mark `Foo` as `const` to allow it to have `const` implementations
   |
LL | #[const_trait] trait Foo {
   | ++++++++++++++

error: `[const]` can only be applied to `const` traits
  --> $DIR/super-traits-fail-3.rs:23:12
   |
LL | trait Bar: [const] Foo {}
   |            ^^^^^^^ can't be applied to `Foo`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: mark `Foo` as `const` to allow it to have `const` implementations
   |
LL | #[const_trait] trait Foo {
   | ++++++++++++++

error: `[const]` can only be applied to `const` traits
  --> $DIR/super-traits-fail-3.rs:32:17
   |
LL | const fn foo<T: [const] Bar>(x: &T) {
   |                 ^^^^^^^ can't be applied to `Bar`
   |
help: mark `Bar` as `const` to allow it to have `const` implementations
   |
LL | #[const_trait] trait Bar: [const] Foo {}
   | ++++++++++++++

error: `[const]` can only be applied to `const` traits
  --> $DIR/super-traits-fail-3.rs:32:17
   |
LL | const fn foo<T: [const] Bar>(x: &T) {
   |                 ^^^^^^^ can't be applied to `Bar`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: mark `Bar` as `const` to allow it to have `const` implementations
   |
LL | #[const_trait] trait Bar: [const] Foo {}
   | ++++++++++++++

error[E0015]: cannot call non-const method `<T as Foo>::a` in constant functions
  --> $DIR/super-traits-fail-3.rs:36:7
   |
LL |     x.a();
   |       ^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0015`.
